--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "cmd-translate",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "命令行翻译器",
   "bin": {
     "to": "dist/cli.js"
@@ -8,7 +8,8 @@
   "main": "dist/main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "ts-node src/cli.ts"
+    "start": "ts-node src/cli.ts",
+    "build": "tsc src/**.ts --outDir dist"
   },
   "files": [
     "dist/**/*.js"
@@ -27,7 +28,9 @@
   "license": "ISC",
   "dependencies": {
     "commander": "^5.1.0",
-    "md5": "^2.2.1"
+    "md5": "^2.2.1",
+    "ts-node": "^10.7.0",
+    "typescript": "^4.6.3"
   },
   "devDependencies": {
     "@types/md5": "^2.2.0",
